--- a/product/package.json
+++ b/product/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "axios": "^1.9.0",
     "bootstrap": "^5.3.6",
-    "mdb-react-ui-kit": "^9.0.0",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
     "react-router-dom": "^7.6.0"
